Outlier Detection and removal for both skewed and non skewed graphs.

--- a/sheet_processing_for_non_skewed_graphs.ipynb
+++ b/sheet_processing_for_non_skewed_graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,84 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>60</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
-       "      <td>80</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   #     Name Type 1  Type 2  HP  Attack  Defense  Sp. Atk  Sp. Def  Speed  \\\n",
-       "1  2  Ivysaur  Grass  Poison  60      62       63       80       80     60   \n",
-       "\n",
-       "   Generation  Legendary  \n",
-       "1           1      False  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[df['Name'] == \"Ivysaur\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +494,7 @@
        "[65 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,6 +502,74 @@
    "source": [
     "legendary_pokemons = True\n",
     "df.loc[df['Legendary'] == legendary_pokemons]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sb\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# df = pd.read_csv(\"./pokemon_data.csv\")\n",
+    "plt.figure(figsize=(16,5))\n",
+    "plt.subplot(1,2,1)\n",
+    "sb.distplot(df[\"Defense\"])\n",
+    "plt.subplot(1,2,2)\n",
+    "sb.boxplot(y=\"Defense\", data=df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[\"Defense\"].describe()\n",
+    "h_bound = df[\"Defense\"].mean() + 3 * df[\"Defense\"].std()\n",
+    "l_bound = df[\"Defense\"].mean() - 3 * df[\"Defense\"].std()\n",
+    "print(h_bound, l_bound)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trimining Outliars\n",
+    "\n",
+    "# df.loc[(df[\"Defense\"] > h_bound) | (df[\"Defense\"] < l_bound)]\n",
+    "# new_df = df[(df[\"Defense\"] < h_bound) & (df[\"Defense\"] > l_bound)]\n",
+    "# new_df\n",
+    "\n",
+    "# by calculating z_score and remove above and lower z_score value then 3 and -3 respecively\n",
+    "\n",
+    "# df[\"Defense_zscore\"] = (df[\"Defense\"] - df[\"Defense\"].mean())/df[\"Defense\"].std()\n",
+    "# new_df = df[(df[\"Defense_zscore\"]<3) & (df[\"Defense_zscore\"]>-3)]\n",
+    "# new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Capping outliars\n",
+    "\n",
+    "df[\"Defense\"] = np.where(df[\"Defense\"]>h_bound, \n",
+    "         h_bound,\n",
+    "         np.where(df[\"Defense\"]<l_bound, \n",
+    "         l_bound,\n",
+    "         df[\"Defense\"]))\n",
+    "df[\"Defense\"]"
    ]
   },
   {
