--- a/pandas_cleaning_practice.ipynb
+++ b/pandas_cleaning_practice.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "d9858b03-c0f2-46fd-b937-d14848dd3712",
    "metadata": {},
    "outputs": [
@@ -253,17 +253,12 @@
        "      <th>athlete_id</th>\n",
        "      <th>Measurements</th>\n",
        "      <th>Affiliations</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Nick/petnames</th>\n",
+       "      <th>Title(s)</th>\n",
+       "      <th>Other names</th>\n",
+       "      <th>Nationality</th>\n",
        "      <th>Original name</th>\n",
        "      <th>Name order</th>\n",
-       "      <th>Born_Year</th>\n",
-       "      <th>Died_Year</th>\n",
-       "      <th>Born_City</th>\n",
-       "      <th>Born_Region</th>\n",
-       "      <th>Born_Country</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Height_cm</th>\n",
-       "      <th>Weight_kg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -279,15 +274,10 @@
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1886</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>Bordeaux</td>\n",
-       "      <td>Gironde</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>Jean-François Blanchy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -303,17 +293,12 @@
        "      <td>2</td>\n",
        "      <td>183 cm / 76 kg</td>\n",
        "      <td>Racing Club de France, Paris (FRA)</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1969</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Meulan</td>\n",
-       "      <td>Yvelines</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>Arnaud Boetsch</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>76.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -327,17 +312,12 @@
        "      <td>3</td>\n",
        "      <td>183 cm / 76 kg</td>\n",
        "      <td>TCP, Paris (FRA)</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Le Basque Bondissant (The Bounding Basque)</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1898</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>Biarritz</td>\n",
-       "      <td>Pyrénées-Atlantiques</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>Jean Borotra</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>76.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -351,17 +331,12 @@
        "      <td>4</td>\n",
        "      <td>168 cm / 64 kg</td>\n",
        "      <td>Sporting club de Paris, Paris (FRA)</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Toto</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1895</td>\n",
-       "      <td>1978</td>\n",
-       "      <td>Paris VIIIe</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>Jacques Brugnon</td>\n",
-       "      <td>168.0</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -375,21 +350,15 @@
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
        "      <td>TCP, Paris (FRA)</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1878</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>Wandsworth</td>\n",
-       "      <td>England</td>\n",
-       "      <td>GBR</td>\n",
-       "      <td>Albert Canet</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -421,42 +390,42 @@
        "3              20 March 1978 in Monaco, Monaco (MON)  France           4   \n",
        "4            25 July 1930 in Paris VIIe, Paris (FRA)  France           5   \n",
        "\n",
-       "     Measurements                         Affiliations  ... Original name  \\\n",
-       "0             NaN                                  NaN  ...           NaN   \n",
-       "1  183 cm / 76 kg   Racing Club de France, Paris (FRA)  ...           NaN   \n",
-       "2  183 cm / 76 kg                     TCP, Paris (FRA)  ...           NaN   \n",
-       "3  168 cm / 64 kg  Sporting club de Paris, Paris (FRA)  ...           NaN   \n",
-       "4             NaN                     TCP, Paris (FRA)  ...           NaN   \n",
+       "     Measurements                         Affiliations  \\\n",
+       "0             NaN                                  NaN   \n",
+       "1  183 cm / 76 kg   Racing Club de France, Paris (FRA)   \n",
+       "2  183 cm / 76 kg                     TCP, Paris (FRA)   \n",
+       "3  168 cm / 64 kg  Sporting club de Paris, Paris (FRA)   \n",
+       "4             NaN                     TCP, Paris (FRA)   \n",
        "\n",
-       "  Name order Born_Year Died_Year    Born_City           Born_Region  \\\n",
-       "0        NaN      1886      1960     Bordeaux               Gironde   \n",
-       "1        NaN      1969      <NA>       Meulan              Yvelines   \n",
-       "2        NaN      1898      1994     Biarritz  Pyrénées-Atlantiques   \n",
-       "3        NaN      1895      1978  Paris VIIIe                 Paris   \n",
-       "4        NaN      1878      1930   Wandsworth               England   \n",
+       "                                Nick/petnames Title(s) Other names  \\\n",
+       "0                                         NaN      NaN         NaN   \n",
+       "1                                         NaN      NaN         NaN   \n",
+       "2  Le Basque Bondissant (The Bounding Basque)      NaN         NaN   \n",
+       "3                                        Toto      NaN         NaN   \n",
+       "4                                         NaN      NaN         NaN   \n",
        "\n",
-       "   Born_Country                   Name Height_cm Weight_kg  \n",
-       "0           FRA  Jean-François Blanchy       NaN       NaN  \n",
-       "1           FRA         Arnaud Boetsch     183.0      76.0  \n",
-       "2           FRA           Jean Borotra     183.0      76.0  \n",
-       "3           FRA        Jacques Brugnon     168.0      64.0  \n",
-       "4           GBR           Albert Canet       NaN       NaN  \n",
-       "\n",
-       "[5 rows x 24 columns]"
+       "  Nationality Original name Name order  \n",
+       "0         NaN           NaN        NaN  \n",
+       "1         NaN           NaN        NaN  \n",
+       "2         NaN           NaN        NaN  \n",
+       "3         NaN           NaN        NaN  \n",
+       "4         NaN           NaN        NaN  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# import pandas as pd\n",
+    "# df = pd.read_csv(\"./bios.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "fbf0630d-9165-43f7-9194-110065aaf566",
    "metadata": {},
    "outputs": [
@@ -498,66 +467,66 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Jean-François Blanchy</td>\n",
-       "      <td>1886</td>\n",
+       "      <td>1886.0</td>\n",
        "      <td>Bordeaux</td>\n",
        "      <td>Gironde</td>\n",
        "      <td>FRA</td>\n",
        "      <td>France</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1960</td>\n",
+       "      <td>1960.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Arnaud Boetsch</td>\n",
-       "      <td>1969</td>\n",
+       "      <td>1969.0</td>\n",
        "      <td>Meulan</td>\n",
        "      <td>Yvelines</td>\n",
        "      <td>FRA</td>\n",
        "      <td>France</td>\n",
        "      <td>183.0</td>\n",
        "      <td>76.0</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Jean Borotra</td>\n",
-       "      <td>1898</td>\n",
+       "      <td>1898.0</td>\n",
        "      <td>Biarritz</td>\n",
        "      <td>Pyrénées-Atlantiques</td>\n",
        "      <td>FRA</td>\n",
        "      <td>France</td>\n",
        "      <td>183.0</td>\n",
        "      <td>76.0</td>\n",
-       "      <td>1994</td>\n",
+       "      <td>1994.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>Jacques Brugnon</td>\n",
-       "      <td>1895</td>\n",
+       "      <td>1895.0</td>\n",
        "      <td>Paris VIIIe</td>\n",
        "      <td>Paris</td>\n",
        "      <td>FRA</td>\n",
        "      <td>France</td>\n",
        "      <td>168.0</td>\n",
        "      <td>64.0</td>\n",
-       "      <td>1978</td>\n",
+       "      <td>1978.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Albert Canet</td>\n",
-       "      <td>1878</td>\n",
+       "      <td>1878.0</td>\n",
        "      <td>Wandsworth</td>\n",
        "      <td>England</td>\n",
        "      <td>GBR</td>\n",
        "      <td>France</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1930</td>\n",
+       "      <td>1930.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -565,33 +534,35 @@
       ],
       "text/plain": [
        "   athlete_id                   Name  Born_Year    Born_City  \\\n",
-       "0           1  Jean-François Blanchy       1886     Bordeaux   \n",
-       "1           2         Arnaud Boetsch       1969       Meulan   \n",
-       "2           3           Jean Borotra       1898     Biarritz   \n",
-       "3           4        Jacques Brugnon       1895  Paris VIIIe   \n",
-       "4           5           Albert Canet       1878   Wandsworth   \n",
+       "0           1  Jean-François Blanchy     1886.0     Bordeaux   \n",
+       "1           2         Arnaud Boetsch     1969.0       Meulan   \n",
+       "2           3           Jean Borotra     1898.0     Biarritz   \n",
+       "3           4        Jacques Brugnon     1895.0  Paris VIIIe   \n",
+       "4           5           Albert Canet     1878.0   Wandsworth   \n",
        "\n",
        "            Born_Region Born_Country     NOC  Height_cm  Weight_kg  Died_Year  \n",
-       "0               Gironde          FRA  France        NaN        NaN       1960  \n",
-       "1              Yvelines          FRA  France      183.0       76.0       <NA>  \n",
-       "2  Pyrénées-Atlantiques          FRA  France      183.0       76.0       1994  \n",
-       "3                 Paris          FRA  France      168.0       64.0       1978  \n",
-       "4               England          GBR  France        NaN        NaN       1930  "
+       "0               Gironde          FRA  France        NaN        NaN     1960.0  \n",
+       "1              Yvelines          FRA  France      183.0       76.0        NaN  \n",
+       "2  Pyrénées-Atlantiques          FRA  France      183.0       76.0     1994.0  \n",
+       "3                 Paris          FRA  France      168.0       64.0     1978.0  \n",
+       "4               England          GBR  France        NaN        NaN     1930.0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "# clean_data = pd.read_csv(\"./clean-bios-data.csv\")\n",
     "clean_data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0332162-e825-496f-b949-ab8f5cc5a4bf",
+   "id": "28c7449a",
    "metadata": {},
    "outputs": [],
    "source": []
